2014-04-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* FLIM-ELS: Install sha1-el.el when dynamic-link is available and
	built-in sha1 library is not available.

2014-04-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* std11.el (std11-narrow-to-header)
	(std11-field-bodies): Minor refactoring.

2014-03-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* sasl-cram.el: Require hex-util.el.

	* sasl-digest.el: Require hex-util.el.

	* hmac-md5.el: Do not require hex-util.el.  Define autoload for
	decode-hex-string only when needed.
	(md5-binary): Use built-in functionality if available.

	* hmac-sha1.el: Linkewise.
	(sha1-binary): Use built-in functionality if available.

2014-03-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* FLIM-ELS: Do not install sha1-el.el when built-in SHA1 library
	is available.

	* sha1.el: Do not require sha1-el.el in the above case.
	(sha1-dl-module): set to nil in the above case.

2014-02-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel-q-ccl.el (quoted-printable-ccl-insert-encoded-file): Call
	insert-file-contents-literally directly.

2013-07-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el: Fix the previous change for really checking.

2013-07-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el: Check whether the mule-vesion variable is defined.

2013-06-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mailcap.el: Removed to resolve compatibility problem when run in
	expanded place.

2013-03-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Many encoder/decoder functions now always encode/decode regardless
	buffer's multibyteness.
	* mime-def.el (mime-charset-decode-string)
	(mime-charset-encode-string): New functions.

	* mime-parse.el (mime-decode-parameter-value)
	(mime-encode-extended-parameter): Use them.

	* eword-decode.el (eword-decode-unstructured-field-body)
	(eword-decode-and-unfold-unstructured-field-body)
	(eword-decode-unfolded-unstructured-field-body)
	(eword-decode-encoded-words, eword-analyze-quoted-string)