@@ -40,7 +40,8 @@
     (setq hmac-modules (cons 'md5-el hmac-modules))))
 
 (unless (and (fboundp 'sha1)
-	     (or (subrp (symbol-function 'secure-hash))
+	     (or (and (fboundp 'secure-hash)
+		      (subrp (symbol-function 'secure-hash)))
 		 (subrp (symbol-function 'sha1))))
   (when (fboundp 'dynamic-link)
     (setq hmac-modules (cons 'sha1-dl hmac-modules)))
